#FP-I129: overflow text fix in course header

--- a/src/app/client/src/app/modules/learn/components/course-consumption/assessment-player/assessment-player.component.scss
+++ b/src/app/client/src/app/modules/learn/components/course-consumption/assessment-player/assessment-player.component.scss
@@ -129,7 +129,7 @@
   }
 }
 
-[dir="rtl"] .textbook__title {
+::ng-deep [dir="rtl"] .textbook__title {
   text-align: right !important;
 }
 
