--- a/src/app/client/src/app/modules/learn/components/course-consumption/course-consumption-header/course-consumption-header.component.scss
+++ b/src/app/client/src/app/modules/learn/components/course-consumption/course-consumption-header/course-consumption-header.component.scss
@@ -47,7 +47,7 @@
   }
 }
 
-[dir="rtl"] .textbook__title {
+::ng-deep [dir="rtl"] .textbook__title {
   text-align: right !important;
 }
 
